# AOWIS-SERVER-DB

./: CMakeLists.txt  README.md
src/: database.cpp  database.h  database_api.cpp  database_api.h  database_gui.cpp  database_gui.h  database_helpers.cpp  database_helpers.h  database_shared.cpp  database_shared.h  database_sqlite.cpp  database_sqlite.h
src/models/: database_configuration.h
tests/: main.cpp
